Kubernetes Phase/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-container
          image: faridmmz/myrepository:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "0.5"  # Maximum CPU limit (e.g., 0.5 CPU core)
              memory: "512Mi"  # Maximum memory limit (e.g., 512MB)
            requests:
              cpu: "0.1"  # Minimum CPU request (e.g., 0.1 CPU core)
              memory: "256Mi"  # Minimum memory request (e.g., 256MB)
