Kubernetes Phase/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: LoadBalancer
  selector:
    app: app  # Update the selector label to match the deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
