Kubernetes Phase/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: faridmmz.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-service
                port:
                  number: 80
